<resources>

    <string name="app_name">UsbHex</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hex_send_button">Send command</string>
    <string name="hex_clear_button">Clear command</string>
    <string name="insert_command">Insert Command</string>
    <string name="hexInputHint">Input HEX values</string>
    <string name="moveToSend">Move to send</string>
    <string name="radioUsb">USB</string>
    <string name="radioTcp">TCP/IP</string>

</resources>