<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
    	android:id="@+id/hex_input"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:hint="@string/hexInputHint"
    />
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    	
		    <Button
		    	android:id="@+id/hex_send"
		    	android:layout_height="wrap_content"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:text="@string/hex_send_button" 
		    />
		    
		    <Button
		    	android:id="@+id/hex_clear"
		    	android:layout_height="wrap_content"
		    	android:layout_width="0dp"
		    	android:layout_weight="1"
		    	android:text="@string/hex_clear_button"
		    />
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:context=".MainActivity" 
    />

</LinearLayout>
