<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton 
            android:id="@+id/radioUSB" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioUsb" />
        <RadioButton 
            android:id="@+id/radioTCP" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioTcp" />
    </RadioGroup>
    
    <Button
        android:id="@+id/moveToSendActivity"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/moveToSend" 
        android:onClick="startMainActivity"
        />
</LinearLayout>